tests/snapshots/scenarios_test__test_send_receive_same_port_server_basic.snap
---
source: tests/scenarios_test.rs
info:
  program: clipboard-sync
  args:
    - "--verbosity"
    - debug=simple
    - "--key"
    - "12345678912345678912345678912345"
    - "--bind-address"
    - "127.0.0.1:12911"
    - "--send-using-address"
    - "127.0.0.1:12911"
    - "--clipboard"
    - /dev/stdin
    - "--allowed-host"
    - "127.0.0.1:12910=testclient"
    - "--protocol"
    - basic
    - "--remote-certificates"
    - tests/certs/cert-verify/for-server
    - "--private-key"
    - tests/certs/localhost.key
    - "--certificate-chain"
    - tests/certs/localhost.crt
snapshot_kind: text
---
success: false
exit_code: -1
----- stdout -----

----- stderr -----
Create filesystem reader {"/dev/stdin": {"default"}}
Ignore writing to stdin
Listening on local_addr=127.0.0.1:12911 protocol=basic
Message received data_size=17 group=default message_type=file
Message sent data_size=2000 network_size=2091 message_type=file
Ntp server not provided
Send clipboard on startup path=/dev/stdin
Starting clipboard to protocol forwarder protocol_types=[Basic] groups=["default"]
Starting filesystem reader
Starting filesystem writer
Starting writer protocol=basic
Validate data identity=127.0.0.1
Watching for filesystem changes path=/dev/stdin
