tests/snapshots/scenarios_test__test_send_receive_same_port_server_tcp.snap
---
source: tests/scenarios_test.rs
info:
  program: clipboard-sync
  args:
    - "--verbosity"
    - debug=simple
    - "--key"
    - "12345678912345678912345678912345"
    - "--bind-address"
    - "127.0.0.1:12911"
    - "--send-using-address"
    - "127.0.0.1:12911"
    - "--clipboard"
    - /dev/stdin
    - "--allowed-host"
    - "127.0.0.1:12910=testclient"
    - "--protocol"
    - tcp
    - "--remote-certificates"
    - tests/certs/cert-verify/for-server
    - "--private-key"
    - tests/certs/localhost.key
    - "--certificate-chain"
    - tests/certs/localhost.crt
snapshot_kind: text
---
success: false
exit_code: -1
----- stdout -----

----- stderr -----
Create filesystem reader {"/dev/stdin": {"default"}}
Ignore writing to stdin
Listening on local_addr=127.0.0.1:12911 protocol=tcp
Message received data_size=17 group=default message_type=file
Message sent data_size=2000 network_size=2091 message_type=file
New connection remote_addr=127.0.0.1:12910
New stream available remote_addr=127.0.0.1:12910
Ntp server not provided
Received stream expected_size=100
Receiver stream error: Connection expected data, but none was received
Send clipboard on startup path=/dev/stdin
Starting clipboard to protocol forwarder protocol_types=[Tcp] groups=["default"]
Starting filesystem reader
Starting filesystem writer
Starting writer protocol=tcp
Tcp receive stream local_addr=127.0.0.1:12911 remote_addr=127.0.0.1:12910
Tcp receive stream local_addr=127.0.0.1:12911 remote_addr=127.0.0.1:12910
Tcp send stream stream_size=2083 remote_addr=127.0.0.1:12910
Using existing connection local_addr=127.0.0.1:12911 remote_addr=127.0.0.1:12910 server_name=testclient
Validate data identity=127.0.0.1
Watching for filesystem changes path=/dev/stdin
